:hammer: Correction on css files, tag alignment and partition of styles :sparkles: new 404 error page.

--- a/src/Styles/App.module.css
+++ b/src/Styles/App.module.css
@@ -53,27 +53,5 @@
   }
 
   .AppFooter p {
-    margin-top: 5px;
-  }
-
-  .WIP {
-    display: flex;
-    width: 100%;
-    height: 99%;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .WIP p {
-    padding-top: 5%;
-    position: relative;
-    justify-content: center;
-    align-content: flex-end;
-  }
-
-  .WIP img {
-    position: relative;
-    align-content: center;
-    width: 40%;
-    height: 40%;
+    font-size: medium;
   }
